--- a/package.json
+++ b/package.json
@@ -7,14 +7,21 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "typecheck:watch": "tsc --noEmit --watch"
   },
   "dependencies": {
+    "@types/ably": "^1.0.0",
+    "@types/uuid": "^9.0.8",
     "@vercel/kv": "^1.0.1",
+    "ably": "^1.2.49",
+    "clsx": "^2.1.0",
+    "mobx-react-lite": "^4.0.6",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
