--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "dependencies": {
     "@types/ably": "^1.0.0",
     "@types/uuid": "^9.0.8",
-    "@vercel/kv": "^1.0.1",
     "ably": "^1.2.49",
     "clsx": "^2.1.0",
+    "debug": "^4.3.4",
     "mobx-react-lite": "^4.0.6",
     "next": "14.1.3",
     "react": "^18",
@@ -24,6 +24,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
