--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "uuid-to-animal-adjectives": "^0.0.3"
   },
   "devDependencies": {
     "@types/debug": "^4.1.12",
